[gd_scene load_steps=6 format=2]

[ext_resource path="res://tileset/tilemap_lone_dungeon.tres" type="TileSet" id=1]
[ext_resource path="res://tileset/scripts/set_camera_limit.gd" type="Script" id=2]
[ext_resource path="res://objects/obj_dungeon_door/obj_dungeon_door.tscn" type="PackedScene" id=3]
[ext_resource path="res://maps/chapter2/chapter2-lone_dungeon.gd" type="Script" id=4]
[ext_resource path="res://entities/entity_mc/entity_mc.tscn" type="PackedScene" id=5]

[node name="chapter2-lone_dungeon" type="Node2D"]
script = ExtResource( 4 )

[node name="tilemap_lone_dungeon" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 1, 131073, 2, 3, 1, 3, 3, 1, 4, 3, 1, 5, 3, 1, 6, 3, 1, 7, 3, 1, 8, 3, 1, 9, 3, 1, 10, 3, 1, 11, 3, 1, 12, 1, 131073, 13, 3, 1, 14, 3, 1, 15, 3, 1, 16, 3, 1, 17, 3, 1, 18, 3, 1, 19, 3, 1, 20, 3, 1, 21, 3, 2, 65536, 3, 65536, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 2, 0, 65554, 2, 0, 65555, 2, 0, 65556, 2, 0, 65557, 3, 65538, 131072, 3, 65536, 131093, 3, 65538, 196608, 3, 65536, 196609, 1, 65537, 196610, 1, 65537, 196611, 1, 65537, 196612, 1, 65537, 196613, 1, 65537, 196614, 1, 65537, 196615, 1, 65537, 196616, 1, 65537, 196617, 1, 65537, 196618, 1, 65537, 196619, 1, 65537, 196620, 3, 65537, 196621, 1, 65537, 196622, 1, 65537, 196623, 1, 65537, 196624, 1, 65537, 196625, 1, 65537, 196626, 1, 65537, 196627, 1, 65537, 196628, 3, 65537, 196629, 3, 65538, 262144, 3, 65536, 262145, 1, 65537, 262146, 1, 65537, 262147, 1, 65537, 262148, 1, 65537, 262149, 1, 65537, 262150, 1, 65537, 262151, 1, 65537, 262152, 1, 65537, 262153, 1, 65537, 262154, 1, 65537, 262155, 1, 65537, 262156, 3, 65537, 262157, 1, 65537, 262158, 1, 65537, 262159, 1, 65537, 262160, 1, 65537, 262161, 1, 65537, 262162, 1, 65537, 262163, 1, 65537, 262164, 3, 65537, 262165, 3, 65538, 327680, 3, 65536, 327681, 1, 65537, 327682, 1, 65537, 327683, 1, 65537, 327684, 1, 65537, 327685, 1, 65537, 327686, 1, 65537, 327687, 1, 65537, 327688, 1, 65537, 327689, 1, 65537, 327690, 1, 65537, 327691, 1, 65537, 327692, 3, 65537, 327693, 1, 65537, 327694, 1, 65537, 327695, 1, 65537, 327696, 1, 65537, 327697, 1, 65537, 327698, 1, 65537, 327699, 1, 65537, 327700, 3, 65537, 327701, 3, 65538, 393216, 3, 65536, 393217, 1, 65537, 393218, 1, 65537, 393219, 1, 65537, 393220, 1, 65537, 393221, 1, 65537, 393222, 1, 65537, 393223, 1, 65537, 393224, 1, 65537, 393225, 1, 65537, 393226, 1, 65537, 393227, 1, 65537, 393228, 3, 65537, 393229, 1, 65537, 393230, 1, 65537, 393231, 1, 65537, 393232, 1, 65537, 393233, 1, 65537, 393234, 1, 65537, 393235, 1, 65537, 393236, 3, 65537, 393237, 3, 65538, 458752, 3, 65536, 458753, 1, 65537, 458754, 1, 65537, 458755, 1, 65537, 458756, 1, 65537, 458757, 1, 65537, 458758, 1, 65537, 458759, 1, 65537, 458760, 1, 65537, 458761, 1, 65537, 458762, 1, 65537, 458763, 1, 65537, 458764, 3, 65537, 458765, 1, 65537, 458766, 1, 65537, 458767, 1, 65537, 458768, 1, 65537, 458769, 1, 65537, 458770, 1, 65537, 458771, 1, 65537, 458772, 3, 65537, 458773, 3, 65538, 524288, 3, 65536, 524289, 1, 65537, 524290, 1, 65537, 524291, 1, 65537, 524292, 1, 65537, 524293, 1, 65537, 524294, 1, 65537, 524295, 1, 65537, 524296, 1, 65537, 524297, 1, 65537, 524298, 1, 65537, 524299, 1, 65537, 524300, 3, 65537, 524301, 1, 65537, 524302, 1, 65537, 524303, 1, 65537, 524304, 1, 65537, 524305, 1, 65537, 524306, 1, 65537, 524307, 1, 65537, 524308, 3, 65537, 524309, 3, 65538, 589824, 3, 65536, 589825, 1, 65537, 589826, 1, 65537, 589827, 1, 65537, 589828, 1, 65537, 589829, 1, 65537, 589830, 1, 65537, 589831, 1, 65537, 589832, 1, 65537, 589833, 1, 65537, 589834, 1, 65537, 589835, 1, 65537, 589836, 3, 65537, 589837, 1, 65537, 589838, 1, 65537, 589839, 1, 65537, 589840, 1, 65537, 589841, 1, 65537, 589842, 1, 65537, 589843, 1, 65537, 589844, 3, 65537, 589845, 3, 65538, 655360, 3, 65536, 655361, 1, 65537, 655362, 1, 65537, 655363, 1, 65537, 655364, 1, 65537, 655365, 1, 65537, 655366, 1, 65537, 655367, 1, 65537, 655368, 1, 65537, 655369, 1, 65537, 655370, 1, 65537, 655371, 1, 65537, 655372, 3, 65537, 655373, 1, 65537, 655374, 1, 65537, 655375, 1, 65537, 655376, 1, 65537, 655377, 1, 65537, 655378, 1, 65537, 655379, 1, 65537, 655380, 3, 65537, 655381, 3, 65538, 720896, 1, 65538, 720897, 1, 65537, 720898, 1, 65537, 720899, 1, 65537, 720900, 1, 65537, 720901, 1, 65537, 720902, 1, 65537, 720903, 1, 65537, 720904, 1, 65537, 720905, 1, 65537, 720906, 1, 65537, 720907, 1, 65537, 720908, 3, 65537, 720909, 1, 65537, 720910, 1, 65537, 720911, 1, 65537, 720912, 1, 65537, 720913, 1, 65537, 720914, 1, 65537, 720915, 1, 65537, 720916, 3, 65537, 720917, 3, 65538, 786432, 3, 65536, 786433, 1, 65537, 786434, 1, 65537, 786435, 1, 65537, 786436, 1, 65537, 786437, 1, 65537, 786438, 1, 65537, 786439, 1, 65537, 786440, 1, 65537, 786441, 1, 65537, 786442, 1, 65537, 786443, 1, 65537, 786444, 3, 65537, 786445, 1, 65537, 786446, 1, 65537, 786447, 1, 65537, 786448, 1, 65537, 786449, 1, 65537, 786450, 1, 65537, 786451, 1, 65537, 786452, 3, 65537, 786453, 3, 65538, 851968, 3, 65536, 851969, 1, 65537, 851970, 1, 65537, 851971, 1, 65537, 851972, 1, 65537, 851973, 1, 65537, 851974, 1, 65537, 851975, 1, 65537, 851976, 1, 65537, 851977, 1, 65537, 851978, 1, 65537, 851979, 1, 65537, 851980, 3, 65537, 851981, 1, 65537, 851982, 1, 65537, 851983, 1, 65537, 851984, 1, 65537, 851985, 1, 65537, 851986, 1, 65537, 851987, 1, 65537, 851988, 3, 65537, 851989, 3, 65538, 917504, 3, 65536, 917505, 1, 65537, 917506, 1, 65537, 917507, 1, 65537, 917508, 1, 65537, 917509, 1, 65537, 917510, 1, 65537, 917511, 1, 65537, 917512, 1, 65537, 917513, 1, 65537, 917514, 1, 65537, 917515, 1, 65537, 917516, 3, 65537, 917517, 1, 65537, 917518, 1, 65537, 917519, 1, 65537, 917520, 1, 65537, 917521, 1, 65537, 917522, 1, 65537, 917523, 1, 65537, 917524, 3, 65537, 917525, 3, 65538, 983040, 3, 65536, 983041, 1, 65537, 983042, 1, 65537, 983043, 1, 65537, 983044, 1, 65537, 983045, 1, 65537, 983046, 1, 65537, 983047, 1, 65537, 983048, 1, 65537, 983049, 1, 65537, 983050, 1, 65537, 983051, 1, 65537, 983052, 3, 65537, 983053, 1, 65537, 983054, 1, 65537, 983055, 1, 65537, 983056, 1, 65537, 983057, 1, 65537, 983058, 1, 65537, 983059, 1, 65537, 983060, 3, 65537, 983061, 3, 65538, 1048576, 3, 65536, 1048577, 1, 1, 1048578, 1, 1, 1048579, 1, 1, 1048580, 1, 1, 1048581, 1, 1, 1048582, 1, 1, 1048583, 1, 1, 1048584, 1, 1, 1048585, 1, 2, 1048586, 1, 65537, 1048587, 1, 65537, 1048588, 1, 0, 1048589, 1, 1, 1048590, 1, 1, 1048591, 1, 1, 1048592, 1, 1, 1048593, 1, 1, 1048594, 1, 1, 1048595, 1, 1, 1048596, 1, 1, 1048597, 3, 65538, 1114112, 3, 65536, 1114113, 1, 131073, 1114114, 1, 131073, 1114115, 1, 131073, 1114116, 1, 131073, 1114117, 1, 131073, 1114118, 1, 131073, 1114119, 1, 131073, 1114120, 1, 131073, 1114121, 1, 131074, 1114122, 1, 65537, 1114123, 1, 65537, 1114124, 1, 131072, 1114125, 1, 131073, 1114126, 1, 131073, 1114127, 1, 131073, 1114128, 1, 131073, 1114129, 1, 131073, 1114130, 1, 131073, 1114131, 1, 131073, 1114132, 1, 131073, 1114133, 3, 65538, 1179648, 3, 65536, 1179649, 2, 0, 1179650, 2, 0, 1179651, 2, 0, 1179652, 2, 0, 1179653, 2, 0, 1179654, 2, 0, 1179655, 2, 0, 1179656, 2, 0, 1179657, 2, 0, 1179658, 1, 65537, 1179659, 1, 65537, 1179660, 2, 0, 1179661, 2, 0, 1179662, 2, 0, 1179663, 2, 0, 1179664, 2, 0, 1179665, 2, 0, 1179666, 2, 0, 1179667, 2, 0, 1179668, 2, 0, 1179669, 3, 65538, 1245184, 3, 65536, 1245194, 1, 65537, 1245195, 1, 65537, 1245205, 3, 65538, 1310720, 3, 65536, 1310721, 1, 65537, 1310722, 1, 65537, 1310723, 1, 65537, 1310724, 1, 65537, 1310725, 1, 65537, 1310726, 1, 65537, 1310727, 1, 65537, 1310728, 1, 65537, 1310729, 1, 65537, 1310730, 1, 65537, 1310731, 1, 65537, 1310732, 3, 65537, 1310733, 1, 65537, 1310734, 1, 65537, 1310735, 1, 65537, 1310736, 1, 65537, 1310737, 1, 65537, 1310738, 1, 65537, 1310739, 1, 65537, 1310740, 3, 65537, 1310741, 3, 65538, 1376256, 3, 65536, 1376257, 1, 65537, 1376258, 1, 65537, 1376259, 1, 65537, 1376260, 1, 65537, 1376261, 1, 65537, 1376262, 1, 65537, 1376263, 1, 65537, 1376264, 1, 65537, 1376265, 1, 65537, 1376266, 1, 65537, 1376267, 1, 65537, 1376268, 3, 65537, 1376269, 1, 65537, 1376270, 1, 65537, 1376271, 1, 65537, 1376272, 1, 65537, 1376273, 1, 65537, 1376274, 1, 65537, 1376275, 1, 65537, 1376276, 3, 65537, 1376277, 3, 65538, 1441792, 3, 65536, 1441793, 1, 65537, 1441794, 1, 65537, 1441795, 1, 65537, 1441796, 1, 65537, 1441797, 1, 65537, 1441798, 1, 65537, 1441799, 1, 65537, 1441800, 1, 65537, 1441801, 1, 65537, 1441802, 1, 65537, 1441803, 1, 65537, 1441804, 3, 65537, 1441805, 1, 65537, 1441806, 1, 65537, 1441807, 1, 65537, 1441808, 1, 65537, 1441809, 1, 65537, 1441810, 1, 65537, 1441811, 1, 65537, 1441812, 3, 65537, 1441813, 3, 65538, 1507328, 3, 65536, 1507329, 3, 65537, 1507330, 1, 65537, 1507331, 1, 65537, 1507332, 1, 65537, 1507333, 1, 65537, 1507334, 1, 65537, 1507335, 1, 65537, 1507336, 1, 65537, 1507337, 1, 65537, 1507338, 1, 65537, 1507339, 1, 65537, 1507340, 3, 65537, 1507341, 1, 65537, 1507342, 1, 65537, 1507343, 1, 65537, 1507344, 1, 65537, 1507345, 1, 65537, 1507346, 1, 65537, 1507347, 1, 65537, 1507348, 3, 65537, 1507349, 3, 65538, 1572864, 3, 65536, 1572865, 3, 65537, 1572866, 1, 65537, 1572867, 1, 65537, 1572868, 1, 65537, 1572869, 1, 65537, 1572870, 1, 65537, 1572871, 1, 65537, 1572872, 1, 65537, 1572873, 1, 65537, 1572874, 1, 65537, 1572875, 1, 65537, 1572876, 3, 65537, 1572877, 1, 65537, 1572878, 1, 65537, 1572879, 1, 65537, 1572880, 1, 65537, 1572881, 1, 65537, 1572882, 1, 65537, 1572883, 1, 65537, 1572884, 3, 65537, 1572885, 3, 65538, 1638400, 3, 65536, 1638401, 3, 65537, 1638402, 1, 65537, 1638403, 1, 65537, 1638404, 1, 65537, 1638405, 1, 65537, 1638406, 1, 65537, 1638407, 1, 65537, 1638408, 1, 65537, 1638409, 1, 65537, 1638410, 1, 65537, 1638411, 1, 65537, 1638412, 3, 65537, 1638413, 1, 65537, 1638414, 1, 65537, 1638415, 1, 65537, 1638416, 1, 65537, 1638417, 1, 65537, 1638418, 1, 65537, 1638419, 1, 65537, 1638420, 3, 65537, 1638421, 3, 65538, 1703936, 1, 65538, 1703937, 1, 65537, 1703938, 1, 65537, 1703939, 1, 65537, 1703940, 1, 65537, 1703941, 1, 65537, 1703942, 1, 65537, 1703943, 1, 65537, 1703944, 1, 65537, 1703945, 1, 65537, 1703946, 1, 65537, 1703947, 1, 65537, 1703948, 3, 65537, 1703949, 1, 65537, 1703950, 1, 65537, 1703951, 1, 65537, 1703952, 1, 65537, 1703953, 1, 65537, 1703954, 1, 65537, 1703955, 1, 65537, 1703956, 1, 65537, 1703957, 1, 65536, 1769472, 1, 65538, 1769473, 1, 65537, 1769474, 1, 65537, 1769475, 1, 65537, 1769476, 1, 65537, 1769477, 1, 65537, 1769478, 1, 65537, 1769479, 1, 65537, 1769480, 1, 65537, 1769481, 1, 65537, 1769482, 1, 65537, 1769483, 1, 65537, 1769484, 3, 65537, 1769485, 1, 65537, 1769486, 1, 65537, 1769487, 1, 65537, 1769488, 1, 65537, 1769489, 1, 65537, 1769490, 1, 65537, 1769491, 1, 65537, 1769492, 1, 65537, 1769493, 1, 65536, 1835008, 1, 65538, 1835009, 1, 65537, 1835010, 1, 65537, 1835011, 1, 65537, 1835012, 1, 65537, 1835013, 1, 65537, 1835014, 1, 65537, 1835015, 1, 65537, 1835016, 1, 65537, 1835017, 1, 65537, 1835018, 1, 65537, 1835019, 1, 65537, 1835020, 3, 65537, 1835021, 1, 65537, 1835022, 1, 65537, 1835023, 1, 65537, 1835024, 1, 65537, 1835025, 1, 65537, 1835026, 1, 65537, 1835027, 1, 65537, 1835028, 1, 65537, 1835029, 1, 65536, 1900544, 1, 65538, 1900545, 1, 65537, 1900546, 1, 65537, 1900547, 1, 65537, 1900548, 1, 65537, 1900549, 1, 65537, 1900550, 1, 65537, 1900551, 1, 65537, 1900552, 1, 65537, 1900553, 1, 65537, 1900554, 1, 65537, 1900555, 1, 65537, 1900556, 3, 65537, 1900557, 1, 65537, 1900558, 1, 65537, 1900559, 1, 65537, 1900560, 1, 65537, 1900561, 1, 65537, 1900562, 1, 65537, 1900563, 1, 65537, 1900564, 1, 65537, 1900565, 1, 65536, 1966080, 1, 65538, 1966081, 1, 65537, 1966082, 1, 65537, 1966083, 1, 65537, 1966084, 1, 65537, 1966085, 1, 65537, 1966086, 1, 65537, 1966087, 1, 65537, 1966088, 1, 65537, 1966089, 1, 65537, 1966090, 1, 65537, 1966091, 1, 65537, 1966092, 3, 65537, 1966093, 1, 65537, 1966094, 1, 65537, 1966095, 1, 65537, 1966096, 1, 65537, 1966097, 1, 65537, 1966098, 1, 65537, 1966099, 1, 65537, 1966100, 1, 65537, 1966101, 1, 65536, 2031616, 1, 65538, 2031617, 1, 65537, 2031618, 1, 65537, 2031619, 1, 65537, 2031620, 1, 65537, 2031621, 1, 65537, 2031622, 1, 65537, 2031623, 1, 65537, 2031624, 1, 65537, 2031625, 1, 65537, 2031626, 1, 65537, 2031627, 1, 65537, 2031628, 3, 65537, 2031629, 1, 65537, 2031630, 1, 65537, 2031631, 1, 65537, 2031632, 1, 65537, 2031633, 1, 65537, 2031634, 1, 65537, 2031635, 1, 65537, 2031636, 1, 65537, 2031637, 1, 65536, 2097152, 1, 65538, 2097153, 1, 65537, 2097154, 1, 65537, 2097155, 1, 65537, 2097156, 1, 65537, 2097157, 1, 65537, 2097158, 1, 65537, 2097159, 1, 65537, 2097160, 1, 65537, 2097161, 1, 65537, 2097162, 1, 65537, 2097163, 1, 65537, 2097164, 3, 65537, 2097165, 1, 65537, 2097166, 1, 65537, 2097167, 1, 65537, 2097168, 1, 65537, 2097169, 1, 65537, 2097170, 1, 65537, 2097171, 1, 65537, 2097172, 1, 65537, 2097173, 1, 65536, 2162688, 3, 65536, 2162689, 3, 131073, 2162690, 3, 131073, 2162691, 3, 131073, 2162692, 3, 131073, 2162693, 3, 131073, 2162694, 3, 131073, 2162695, 3, 131073, 2162696, 1, 1, 2162697, 1, 2, 2162698, 1, 65537, 2162699, 1, 65537, 2162700, 1, 0, 2162701, 1, 1, 2162702, 1, 1, 2162703, 1, 1, 2162704, 1, 1, 2162705, 1, 1, 2162706, 1, 1, 2162707, 1, 1, 2162708, 1, 1, 2162709, 3, 65538, 2228224, 3, 65536, 2228225, 3, 1, 2228226, 3, 1, 2228227, 3, 1, 2228228, 3, 1, 2228229, 3, 1, 2228230, 3, 1, 2228231, 3, 1, 2228232, 1, 131073, 2228233, 1, 131074, 2228234, 3, 65537, 2228235, 1, 65537, 2228236, 1, 131072, 2228237, 1, 131073, 2228238, 1, 131073, 2228239, 3, 1, 2228240, 3, 1, 2228241, 3, 1, 2228242, 3, 1, 2228243, 3, 1, 2228244, 3, 1, 2228245, 3, 65538, 2293760, 3, 65536, 2293761, 2, 0, 2293762, 2, 0, 2293763, 2, 0, 2293764, 2, 0, 2293765, 2, 0, 2293766, 2, 0, 2293767, 2, 0, 2293768, 2, 0, 2293769, 2, 0, 2293770, 3, 65537, 2293771, 1, 65537, 2293772, 2, 0, 2293773, 2, 0, 2293774, 2, 0, 2293775, 2, 0, 2293776, 2, 0, 2293777, 2, 0, 2293778, 2, 0, 2293779, 2, 0, 2293780, 2, 0, 2293781, 3, 65538, 2359296, 3, 65536, 2359306, 1, 65537, 2359307, 1, 65537, 2359317, 3, 65538, 2424832, 1, 65538, 2424833, 1, 65537, 2424834, 1, 65537, 2424835, 1, 65537, 2424836, 1, 65537, 2424837, 1, 65537, 2424838, 1, 65537, 2424839, 1, 65537, 2424840, 1, 65537, 2424841, 1, 65537, 2424842, 1, 65537, 2424843, 1, 65537, 2424844, 3, 65537, 2424845, 1, 65537, 2424846, 1, 65537, 2424847, 1, 65537, 2424848, 1, 65537, 2424849, 1, 65537, 2424850, 1, 65537, 2424851, 1, 65537, 2424852, 1, 65537, 2424853, 1, 65536, 2490368, 1, 65538, 2490369, 1, 65537, 2490370, 1, 65537, 2490371, 1, 65537, 2490372, 1, 65537, 2490373, 1, 65537, 2490374, 1, 65537, 2490375, 1, 65537, 2490376, 1, 65537, 2490377, 1, 65537, 2490378, 1, 65537, 2490379, 1, 65537, 2490380, 3, 65537, 2490381, 1, 65537, 2490382, 1, 65537, 2490383, 1, 65537, 2490384, 1, 65537, 2490385, 1, 65537, 2490386, 1, 65537, 2490387, 1, 65537, 2490388, 1, 65537, 2490389, 1, 65536, 2555904, 1, 65538, 2555905, 1, 65537, 2555906, 1, 65537, 2555907, 1, 65537, 2555908, 1, 65537, 2555909, 1, 65537, 2555910, 1, 65537, 2555911, 1, 65537, 2555912, 1, 65537, 2555913, 1, 65537, 2555914, 1, 65537, 2555915, 1, 65537, 2555916, 3, 65537, 2555917, 1, 65537, 2555918, 1, 65537, 2555919, 1, 65537, 2555920, 1, 65537, 2555921, 1, 65537, 2555922, 1, 65537, 2555923, 1, 65537, 2555924, 1, 65537, 2555925, 1, 65536, 2621440, 1, 65538, 2621441, 1, 65537, 2621442, 1, 65537, 2621443, 1, 65537, 2621444, 1, 65537, 2621445, 1, 65537, 2621446, 1, 65537, 2621447, 1, 65537, 2621448, 1, 65537, 2621449, 1, 65537, 2621450, 1, 65537, 2621451, 1, 65537, 2621452, 3, 65537, 2621453, 1, 65537, 2621454, 1, 65537, 2621455, 1, 65537, 2621456, 1, 65537, 2621457, 1, 65537, 2621458, 1, 65537, 2621459, 1, 65537, 2621460, 1, 65537, 2621461, 1, 65536, 2686976, 3, 65536, 2686977, 1, 65537, 2686978, 1, 65537, 2686979, 1, 65537, 2686980, 1, 65537, 2686981, 1, 65537, 2686982, 1, 65537, 2686983, 1, 65537, 2686984, 1, 65537, 2686985, 1, 65537, 2686986, 1, 65537, 2686987, 1, 65537, 2686988, 3, 65537, 2686989, 1, 65537, 2686990, 1, 65537, 2686991, 1, 65537, 2686992, 1, 65537, 2686993, 1, 65537, 2686994, 1, 65537, 2686995, 3, 65537, 2686996, 3, 65537, 2686997, 3, 65538, 2752512, 3, 65536, 2752513, 1, 65537, 2752514, 1, 65537, 2752515, 1, 65537, 2752516, 1, 65537, 2752517, 1, 65537, 2752518, 1, 65537, 2752519, 1, 65537, 2752520, 1, 65537, 2752521, 1, 65537, 2752522, 1, 65537, 2752523, 1, 65537, 2752524, 3, 65537, 2752525, 1, 65537, 2752526, 1, 65537, 2752527, 1, 65537, 2752528, 1, 65537, 2752529, 1, 65537, 2752530, 1, 65537, 2752531, 1, 65537, 2752532, 3, 65537, 2752533, 3, 65538, 2818048, 3, 65536, 2818049, 1, 65537, 2818050, 1, 65537, 2818051, 1, 65537, 2818052, 1, 65537, 2818053, 1, 65537, 2818054, 1, 65537, 2818055, 1, 65537, 2818056, 1, 65537, 2818057, 1, 65537, 2818058, 1, 65537, 2818059, 1, 65537, 2818060, 3, 65537, 2818061, 1, 65537, 2818062, 1, 65537, 2818063, 1, 65537, 2818064, 1, 65537, 2818065, 1, 65537, 2818066, 1, 65537, 2818067, 1, 65537, 2818068, 3, 65537, 2818069, 3, 65538, 2883584, 3, 65536, 2883585, 1, 65537, 2883586, 1, 65537, 2883587, 1, 65537, 2883588, 1, 65537, 2883589, 1, 65537, 2883590, 1, 65537, 2883591, 1, 65537, 2883592, 1, 65537, 2883593, 1, 65537, 2883594, 1, 65537, 2883595, 1, 65537, 2883596, 3, 65537, 2883597, 1, 65537, 2883598, 1, 65537, 2883599, 1, 65537, 2883600, 1, 65537, 2883601, 1, 65537, 2883602, 1, 65537, 2883603, 1, 65537, 2883604, 3, 65537, 2883605, 3, 65538, 2949120, 3, 65536, 2949121, 1, 65537, 2949122, 1, 65537, 2949123, 1, 65537, 2949124, 1, 65537, 2949125, 1, 65537, 2949126, 1, 65537, 2949127, 1, 65537, 2949128, 1, 65537, 2949129, 1, 65537, 2949130, 1, 65537, 2949131, 1, 65537, 2949132, 3, 65537, 2949133, 1, 65537, 2949134, 1, 65537, 2949135, 1, 65537, 2949136, 1, 65537, 2949137, 1, 65537, 2949138, 1, 65537, 2949139, 1, 65537, 2949140, 3, 65537, 2949141, 3, 65538, 3014656, 3, 65536, 3014657, 1, 65537, 3014658, 1, 65537, 3014659, 1, 65537, 3014660, 1, 65537, 3014661, 1, 65537, 3014662, 1, 65537, 3014663, 1, 65537, 3014664, 1, 65537, 3014665, 1, 65537, 3014666, 1, 65537, 3014667, 1, 65537, 3014668, 3, 65537, 3014669, 1, 65537, 3014670, 1, 65537, 3014671, 1, 65537, 3014672, 1, 65537, 3014673, 1, 65537, 3014674, 1, 65537, 3014675, 1, 65537, 3014676, 3, 65537, 3014677, 3, 65538, 3080192, 3, 65536, 3080193, 1, 65537, 3080194, 1, 65537, 3080195, 1, 65537, 3080196, 1, 65537, 3080197, 1, 65537, 3080198, 1, 65537, 3080199, 1, 65537, 3080200, 1, 65537, 3080201, 1, 65537, 3080202, 1, 65537, 3080203, 1, 65537, 3080204, 3, 65537, 3080205, 1, 65537, 3080206, 1, 65537, 3080207, 1, 65537, 3080208, 1, 65537, 3080209, 1, 65537, 3080210, 1, 65537, 3080211, 1, 65537, 3080212, 3, 65537, 3080213, 3, 65538, 3145728, 3, 65536, 3145729, 1, 65537, 3145730, 1, 65537, 3145731, 1, 65537, 3145732, 1, 65537, 3145733, 1, 65537, 3145734, 1, 65537, 3145735, 1, 65537, 3145736, 1, 65537, 3145737, 1, 65537, 3145738, 1, 65537, 3145739, 1, 65537, 3145740, 3, 65537, 3145741, 1, 65537, 3145742, 1, 65537, 3145743, 1, 65537, 3145744, 1, 65537, 3145745, 1, 65537, 3145746, 1, 65537, 3145747, 1, 65537, 3145748, 3, 65537, 3145749, 3, 65538, 3211264, 3, 65536, 3211265, 1, 65537, 3211266, 1, 65537, 3211267, 1, 65537, 3211268, 1, 65537, 3211269, 1, 65537, 3211270, 1, 65537, 3211271, 1, 65537, 3211272, 1, 65537, 3211273, 1, 65537, 3211274, 1, 65537, 3211275, 1, 65537, 3211276, 3, 65537, 3211277, 1, 65537, 3211278, 1, 65537, 3211279, 1, 65537, 3211280, 1, 65537, 3211281, 1, 65537, 3211282, 1, 65537, 3211283, 1, 65537, 3211284, 3, 65537, 3211285, 3, 65538, 3276800, 3, 65536, 3276801, 1, 65537, 3276802, 1, 65537, 3276803, 1, 65537, 3276804, 1, 65537, 3276805, 1, 65537, 3276806, 1, 65537, 3276807, 1, 65537, 3276808, 1, 65537, 3276809, 1, 65537, 3276810, 1, 65537, 3276811, 1, 65537, 3276812, 3, 65537, 3276813, 1, 65537, 3276814, 1, 65537, 3276815, 1, 65537, 3276816, 1, 65537, 3276817, 1, 65537, 3276818, 1, 65537, 3276819, 1, 65537, 3276820, 3, 65537, 3276821, 3, 65538, 3342336, 3, 65536, 3342337, 1, 65537, 3342338, 1, 65537, 3342339, 1, 65537, 3342340, 1, 65537, 3342341, 1, 65537, 3342342, 1, 65537, 3342343, 1, 65537, 3342344, 1, 65537, 3342345, 1, 65537, 3342346, 1, 65537, 3342347, 1, 65537, 3342348, 3, 65537, 3342349, 1, 65537, 3342350, 1, 65537, 3342351, 1, 65537, 3342352, 1, 65537, 3342353, 1, 65537, 3342354, 1, 65537, 3342355, 1, 65537, 3342356, 3, 65537, 3342357, 3, 65538, 3407872, 3, 65536, 3407873, 1, 65537, 3407874, 1, 65537, 3407875, 1, 65537, 3407876, 1, 65537, 3407877, 1, 65537, 3407878, 1, 65537, 3407879, 1, 65537, 3407880, 1, 65537, 3407881, 1, 65537, 3407882, 1, 65537, 3407883, 1, 65537, 3407884, 3, 65537, 3407885, 1, 65537, 3407886, 1, 65537, 3407887, 1, 65537, 3407888, 1, 65537, 3407889, 1, 65537, 3407890, 1, 65537, 3407891, 1, 65537, 3407892, 3, 65537, 3407893, 3, 65538, 3473408, 3, 131072, 3473409, 3, 131073, 3473410, 3, 131073, 3473411, 3, 131073, 3473412, 3, 131073, 3473413, 3, 131073, 3473414, 3, 131073, 3473415, 3, 131073, 3473416, 3, 131073, 3473417, 3, 131073, 3473418, 3, 131073, 3473419, 3, 131073, 3473420, 1, 1, 3473421, 3, 131073, 3473422, 3, 131073, 3473423, 3, 131073, 3473424, 3, 131073, 3473425, 3, 131073, 3473426, 3, 131073, 3473427, 3, 131073, 3473428, 3, 131073, 3473429, 3, 131074 )
script = ExtResource( 2 )

[node name="YSort" type="YSort" parent="."]

[node name="obj_dungeon_door" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 176, 568 )

[node name="obj_dungeon_door2" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 176, 296 )

[node name="node_minions" type="Node2D" parent="YSort"]

[node name="entity_mc" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 176, 832 )

[node name="node_stage_one_spawn" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 72, 640 )

[node name="1" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 176, 640 )

[node name="2" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 280, 640 )

[node name="3" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 280, 712 )

[node name="4" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 72, 712 )

[node name="5" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 176, 720 )

[node name="node_stage_two_spawn" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 48, 352 )

[node name="1" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 176, 352 )

[node name="2" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 304, 352 )

[node name="3" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 48, 448 )

[node name="4" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 304, 448 )

[node name="node_stage_three_spawn" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="node_stage_three_spawn"]
position = Vector2( 48, 72 )

[node name="1" type="Position2D" parent="node_stage_three_spawn"]
position = Vector2( 176, 72 )

[node name="2" type="Position2D" parent="node_stage_three_spawn"]
position = Vector2( 312, 72 )

[node name="3" type="Position2D" parent="node_stage_three_spawn"]
position = Vector2( 312, 224 )

[node name="4" type="Position2D" parent="node_stage_three_spawn"]
position = Vector2( 48, 224 )

[node name="5" type="Position2D" parent="node_stage_three_spawn"]
position = Vector2( 176, 144 )
